changed welcome to hii

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>This is My WebSite </title>
 <h1>This is my Beautifull Website</h1>
-<p>Welcome,I Hope you enjoy my website</p>
+<p>Hii,I Hope you enjoy my website</p>
 <p>:)  x)  :D  XD</p>
 </html>
